# rs-soroban-sdk

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: rust.yml
soroban-ledger-snapshot/: Cargo.toml
soroban-sdk/: Cargo.toml  README.md
soroban-sdk-macros/: Cargo.toml
soroban-sdk-macros/src/: derive_enum.rs  derive_enum_int.rs  derive_error_enum_int.rs  derive_spec_fn.rs  derive_struct.rs  derive_struct_tuple.rs  lib.rs  map_type.rs
soroban-sdk/src/: address.rs  deploy.rs  env.rs  ledger.rs  lib.rs  prng.rs  storage.rs  token.rs
soroban-sdk/src/tests/: contract_add_i32.rs  contract_docs.rs  contract_udt_struct.rs  contract_udt_struct_tuple.rs  contractimport.rs  env.rs  token_client.rs  token_spec.rs
soroban-sdk/test_snapshots/tests/token_client/: test_mock_all_auth.1.json  test_mock_auth.1.json
soroban-spec/: Cargo.toml
soroban-spec-rust/: Cargo.toml
soroban-spec-rust/src/: lib.rs  trait.rs  types.rs
soroban-spec/src/: read.rs
soroban-token-sdk/: Cargo.toml
tests/add_i128/: Cargo.toml
tests/add_u128/: Cargo.toml
tests/add_u64/: Cargo.toml
tests/alloc/: Cargo.toml
tests/auth/: Cargo.toml
tests/contract_data/: Cargo.toml
tests/empty/: Cargo.toml
tests/empty2/: Cargo.toml
tests/errors/: Cargo.toml
tests/events/: Cargo.toml
tests/fuzz/: Cargo.toml
tests/import_contract/: Cargo.toml
tests/invoke_contract/: Cargo.toml
tests/logging/: Cargo.toml
tests/multiimpl/: Cargo.toml
tests/udt/: Cargo.toml
tests/workspace_contract/: Cargo.toml
tests/workspace_lib/: Cargo.toml
