[package]
name = "soroban-sdk-macros"
description = "Soroban SDK macros."
homepage = "https://github.com/shantanu-hashcash/rs-soroban-sdk"
repository = "https://github.com/shantanu-hashcash/rs-soroban-sdk"
authors = ["Hcnet Development Foundation <info@hcnet.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.74"

[lib]
proc-macro = true
doctest = false

[build_dependencies]
rustc_version = "0.4.0"
crate-git-revision = "0.0.6"

[dependencies]
soroban-spec = { workspace = true }
soroban-spec-rust = { workspace = true }
soroban-env-common = { workspace = true }
hcnet-xdr = { workspace = true, features = ["curr", "std"] }
syn = {version="2.0",features=["full"]}
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.11.0"
darling = "0.20.0"
sha2 = "0.10.7"

[features]
testutils = []
