[package]
name = "soroban-spec"
description = "Soroban contract spec utilities."
homepage = "https://github.com/shantanu-hashcash/rs-soroban-sdk"
repository = "https://github.com/shantanu-hashcash/rs-soroban-sdk"
authors = ["Hcnet Development Foundation <info@hcnet.org>"]
readme = "../README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version = "1.74"

[dependencies]
hcnet-xdr = { workspace = true, features = ["curr", "std", "serde"] }
base64 = "0.13.0"
thiserror = "1.0.32"
wasmparser = "0.88.0"

[dev_dependencies]
pretty_assertions = "1.2.1"
